tests/NormalTests/paczka1/small_fuzzy/59088369.err
Error in line 1: 3HKjHC83weN S11 22,2
Error in line 12: E9f S95 51,5
